--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+apparmor==3.0.1
 appdirs==1.4.4
 application-utility==1.3.2
 argcomplete==1.12.1
@@ -40,6 +41,7 @@ packaging==20.9
 pacman-mirrors==4.21.5
 pep517==0.11.0
 Pillow==8.3.1
+pip==20.3.4
 ply==3.11
 progress==1.5
 pycparser==2.20
@@ -60,6 +62,7 @@ resolvelib==0.5.5
 retrying==1.3.3
 rgw==2.0.0
 selenium==3.141.0
+setuptools==57.4.0
 six==1.16.0
 team==1.0
 termcolor==1.1.0
