--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ gunicorn==20.1.0
 Jinja2==3.0.1
 packaging==20.9
 selenium==3.141.0
+soupsieve==2.2.1
 urllib3==1.26.6
 webencodings==0.5.1
 Werkzeug==2.0.1
