--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,3 @@
-appdirs==1.4.4
-argcomplete==1.12.1
-attrs==21.2.0
-beautifulsoup4==4.9.3
+requests==2.26.0
 Flask==2.0.1
-gunicorn==20.1.0
-Jinja2==3.0.1
-packaging==20.9
-selenium==3.141.0
-soupsieve==2.2.1
-urllib3==1.26.6
-webencodings==0.5.1
-Werkzeug==2.0.1
+beautifulsoup4==4.9.3
